syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.cshep4.premierpredictor.user";
//option go_package = "user";
import "google/protobuf/empty.proto";

package model;

service UserService {
    rpc GetAllUsers (google.protobuf.Empty) returns (UserResponse) {}
    rpc GetLeagueUsers (LeagueRequest) returns (UserResponse) {}
}

message LeagueRequest {
    repeated string ids = 1;
}

message UserResponse {
    repeated User users = 1;
}

message User {
    string id = 1;
    string firstName = 2;
    string surname = 3;
    string predictedWinner = 4;
    int32 score = 5;
}